# fdpp

./: .travis.yml  NEWS.md  README.md  build.bat  build_deb.sh  build_rpm.sh  buildall.bat  ci_build.sh  ci_prereq.sh  ci_setup_test.sh  ci_test.sh  ci_test_prereq.sh  clean.bat  clobber.bat  config.b  config.m  config.mak  configure  configure.meson  default.bat  fdkernel.lsm  fdpp.spec.rpkg  filelist  getmake.bat  makefile  meson.build  nasm-segelf.rb  readme.txt  rpkg.macros  travis_build.sh  travis_prereq.sh
.github/workflows/: ci-build.yml
boot/: boot.asm  boot.mak  boot32.asm  boot32lb.asm  makefile  oemboot.asm
contrib/: JWlib
debian/: changelog  control  copyright  fdpp-dev.install  fdpp.install  fdpp.lintian-overrides  install  libfdldr35.install  libfdldr35.lintian-overrides  libfdpp35.install  rules
docs/: bugs.txt  build.txt  config.txt  contrib.txt  copying  fdkernel.lsm  fdpp.lsm  history.txt  intfns.txt  lfnapi.txt  memdisk.txt  mkboot.txt  nls.txt  oldhist.txt  readme.cvs  readme.txt  relnotes.txt  sys.txt
drivers/: devend.asm  device.mak  floppy.asm  getvec.asm  makefile  rdatclk.asm  rdpcclk.asm  timer.asm  wratclk.asm  wrpcclk.asm
fdpp/: cdata.S  clang.mak  config.mak  configure  ctors.cpp  ctors.hpp  defs.mak  dispatch.hpp  dosobj.c  dosobj.cc  dosobj.h  elf.c  elf.h  elf_priv.h  farhlp.c  farhlp.cpp  farhlp.h  farhlp.hpp  farhlp_sta.c  farhlp_sta.h  farobj.hpp  farptr.hpp  fd_exports.h  fdpp.pc.in  fdpp.spec  fdpp.spec.in  git-rev.sh  glob_asm.h  glob_inc.h  glob_tmpl.h  kernel.ld  makefile  malloca.hpp  meson.build  objhlp.cpp  objhlp.hpp  objlock.cpp  objlock.hpp  objtrace.cpp  objtrace.hpp  (+16 more)
fdpp/contrib/: jwlink
fdpp/kernel/: cdata.S  hdr  kernel.ld  makefile  meson.build  num.sh  parsers  plt.S  thunks_priv.h  toolchain-clang.ini  toolchain.ini
fdpp/loader/: elf.c  elf_priv.h  loader.c  makefile  meson.build
fdpp/parsers/: gen_segs.sh  gen_thunks.sh  makefile  mkasmdefs.sh  mkfar.sh  parse_decls.sh  thunk_gen.l  thunk_gen.y  thunks.m4  unfar.h
fdpp/subprojects/: thunk_gen
fdpp/thunk_gen/: meson.build  tg_params.h  thunk_gen.l  thunk_gen.y
fdpp/utils/: makefile  mkfar.sh  thunk_gen.l  thunk_gen.y
hdr/: algnbyte.h  algndflt.h  bprm.h  buffer.h  cds.h  clock.h  cppstubs.hpp  date.h  dcb.h  debug.h  device.h  dirmatch.h  dosctime.h  dosnames.h  dosobj.h  dosobj_priv.h  dsk.h  dyn.h  error.h  exe.h  farhlp.h  farobj.hpp  farptr.hpp  fat.h  fcb.h  file.h  fnode.h  kbd.h  kconfig.h  lol.h  malloca.hpp  mcb.h  memtype.h  network.h  nls.h  objhlp.hpp  pcb.h  portab.h  process.h  sft.h  (+8 more)
include/fdpp/: bprm.h  loader.h  thunks.h
kernel/: 001-437.nls  apisupt.asm  asmsupt.asm  blockio.c  break.c  cdata.S  chario.c  config.c  config.h  console.asm  country.asm  cpu.asm  disk.h  dosfns.c  dosidle.asm  dosnames.c  dosobj.c  dsk.c  dyndata.c  dyndata.h  dyninit.c  entry.asm  error.c  execrh.asm  farhlp.c  farhlp.cpp  fatdir.c  fatfs.c  fattab.c  fcbfns.c  glob_asm.h  glob_fd.h  globals.h  hackrefs.h  hmamgr.c  init-dat.h  init-mod.h  initclk.c  initdisk.c  inithma.c  (+51 more)
kernel/drivers/: floppy.asm  wratclk.asm
kernel/nls/: 001-437.unf  049-850.hc  049-850.unf  files
lib/: libm.mak  makefile
mkfiles/: bc3.mak  bc5.mak  gcc.mak  generic.mak  mscl8.mak  owlinux.mak  owwin.mak  tc2.mak  tc3.mak  turbocpp.mak  watcom.mak
share/: makefile  share.c  share.hlp
subprojects/: kernel  libfdpp  loader  thunk_gen.wrap
sys/: bin2c.c  bin2c.mak  fdkrncfg.c  makefile  sys.c  sys.mak  talloc.c
tests/absread/: absread.c
utils/: echoto  echoto.bat  exeflat.c  indent.ini  makefile  mkfar.sh  patchobj.c  proto.bat  relocinf.c  rmfiles.bat  scopify.sh  thunk_gen.l  thunk_gen.y  wlinker.bat
